--- a/src/index.html
+++ b/src/index.html
@@ -306,3 +306,6 @@
     <script defer type="module" src="index.js"></script>
   </body>
 </html>
+<!-- 
+c:; cd 'c:\Users\ANKIT\Documents\VScode\simplefolio\'; git add .; git commit -a -m "additional commit Nov 2024"; git push -u origin main;
+ -->
