--- a/src/index.html
+++ b/src/index.html
@@ -307,5 +307,5 @@
   </body>
 </html>
 <!-- 
-c:; cd 'c:\Users\ANKIT\Documents\VScode\simplefolio\'; git add .; git commit -a -m "additional commit mar 2025"; git push -u origin main;
+c:; cd 'c:\Users\ANKIT\Documents\VScode\simplefolio\'; git add .; git commit -a -m "additional commit"; git push -u origin main;
  -->
